--- a/intro.html
+++ b/intro.html
@@ -3,10 +3,21 @@
 	<title>My Introduction</title>
 </head>
 <body>
-	<body bgcolor="cyan">
-	<h1 align="center">Thank you for giving me the opportunity to introduce myself</h1>
-	<h2> My name is Rahul Patel</h2>
-	<center><img src="image.png"></center>
-	<h3>I am in Rays to explore and build a career in Programming</h3>
+	<body bgcolor="peach">
+	<h1 align="center">:) Thank you for giving me the opportunity to introduce myself :)</h1>
+	<hr>
+	<hr>
+	<h1> My name is Rahul Patel</h2>
+	<hr>
+	
+	<center><img src="image1.png"height ="300px"width="360px"></center>
+	<h2> I teach free of cost online as it is my passion to share my knowledge. Click the link below to see my channel</h2>
+	<a href="">"https://www.youtube.com/channel/UCUN4nycjyL58H1dsFMdVKmQ"</a>
+	<h2> I was born and brought up in Katni(M.P)</h2>
+	<h2>I have completed my graduation in Civil Engineering</h2>
+	<h2>I have joined  Rays Tech to explore programming world and to build a career in the same further</h2>
+	<h2>Talking about my family, I have my father working in Ordnance Factory Katni. My mother is a housewife and my sister is a Veterinary Doctor</h2>
+	<h2>Coming to my hobbies, I love to teach , i like exploration in new fields, I am an animal lover and a regional level basketball and chess player, I am well aware of jointly keeping my team moving towards the goal </h2>
+	<h2>Awards and achievements: I received Rashtrapati Award in BS&G, Best speaker award in National Youth Congress organized by KVS, I was the CR of my class for 12 years, I won second prize in regional level basketball competition</h2> 
 </body>
 </html>
