--- a/TravelList.html
+++ b/TravelList.html
@@ -2,9 +2,36 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>TravelList</title>
 </head>
 <body>
-
+	<body bgcolor="grey">
+	<h1>Travel List Items</h1>
+	<hr>
 </body>
+	<ol><big><big>Clothes</big></big>
+		<hr>
+				<li>Shirt</li>
+				<li>T-shirt</li>
+				<li>Trouser</li>
+				<li>Shorts</li>
+				<li>Pants</li>
+	</ol>
+	<ul><big><big>Accessories</big></big>
+		<hr>
+				<li>Boots</li>
+				<li>Belt</li>
+				<li>Wallet</li>
+				<li>Charger</li>
+				<li>Socks</li>
+	</ul>
+	<dl><big><big>Definitions</big></big>
+		<hr>
+		<big><big><dt>Class :</dt></big></big>
+				<dd>Keyword is used to declare a class a java</dd>
+		<big><big><dt>Public :</dt></big></big>
+				<dd>It is an access modifier which represents visibility,it means it is visible to all other classes </dd>
+
+		
+	</dl>
 </html>
